--- a/07-Service/helloworld.yaml
+++ b/07-Service/helloworld.yaml
@@ -18,7 +18,7 @@ spec:
       - name: regcred
       containers:
       - name: k8s-demo
-        image: amitvashist7/k8s-tiny-web
+        image: amitvashist7/k8s-tiny-web:2
         imagePullPolicy: IfNotPresent
         ports:
         - name: myappport
